Add indentation rules for macro definitions and endings

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -24,6 +24,10 @@
       "end": "^\\s*\\*/\\s*#?endregion\\b"
     }
   },
+  "indentationRules": {
+    "increaseIndentPattern": "^\\s*\\.macro\\b.*$",
+    "decreaseIndentPattern": "^\\s*\\.endm\\b.*$"
+  },
   "onEnterRules": [
     {
       "beforeText": "^\\s*/\\*\\*\\s*$",
