--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-	"files.exclude": {
-		"dist": false // set this to true to hide the "dist" folder with the compiled JS files
-	},
-	"search.exclude": {
-		"dist": true // set this to false to include "dist" folder in search results
-	},
-	// Turn off tsc task auto detection since we have the necessary tasks as npm scripts
-	"typescript.tsc.autoDetect": "off"
+  "files.exclude": {
+    "dist": false, // set this to true to hide the "dist" folder with the compiled JS files
+    ".vscode-test-web": true
+  },
+  "search.exclude": {
+    "dist": true, // set this to false to include "dist" folder in search results
+    ".vscode-test-web": true
+  },
+  // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
+  "typescript.tsc.autoDetect": "off"
 }
