--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "mocha": "^11.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
+    "type-fest": "^4.40.0",
     "typescript": "^5.8.3"
   }
 }
